--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="eLearning is a modern and fully responsive Template by WebThemez.">
+	<meta name="description" content="Proprietary Career Institute - A For Profit Education For Profitable Education">
 	<meta name="author" content="webThemez.com">
-	<title>eLearning - Free Educational Responsive Web Template </title>
+	<title>Proprietary Career Institute</title>
 	<link rel="favicon" href="assets/images/favicon.png">
 	<link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -28,7 +28,7 @@
 				<!-- Button for smallest screens -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
 				<a class="navbar-brand" href="index.html">
-					<img src="assets/images/logo.png" alt="Techro HTML5 template"></a>
+					<img src="assets/images/pci_logo_long_300.png" alt="PCI logo"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right mainNav">
@@ -61,18 +61,18 @@
 			<div class="banner-content">
 				<div id="da-slider" class="da-slider">
 					<div class="da-slide">
-						<h2>Educational Website</h2>
-						<p>Amazing free responsive website for free, enjoy!!!</p>
+						<h2>Amazing Opportunity</h2>
+						<p>Want a career in proprietary education?</p>
 						<div class="da-img"></div>
 					</div>
 					<div class="da-slide">
 						<h2>Online Education</h2>
-						<p>Bootstrap is a powerful mobile first front-end framework..</p>
+						<p>Over 75 years of providing quality edutainment.</p>
 						<div class="da-img"></div>
 					</div>
 					<div class="da-slide">
 						<h2>Super Success</h2>
-						<p>HTML5 is a markup language used for structuring and presenting Web.</p>
+						<p>Graduates enter the field at the top of their game.</p>
 						<div class="da-img"></div>
 					</div>
 				</div>
