--- a/index.html
+++ b/index.html
@@ -33,19 +33,10 @@
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right mainNav">
 					<li class="active"><a href="index.html">Home</a></li>
-					<li><a href="about.html">About</a></li>
 					<li><a href="courses.html">Courses</a></li>
-					<li><a href="fees.html">Fees</a></li>
+					<li><a href="aid.html">Financial Aid</a></li>
 					<li><a href="portfolio.html">Portfolio</a></li>
-					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <b class="caret"></b></a>
-						<ul class="dropdown-menu">
-							<li><a href="sidebar-right.html">Right Sidebar</a></li>
-							<li><a href="#">Dummy Link1</a></li>
-							<li><a href="#">Dummy Link2</a></li>
-							<li><a href="#">Dummy Link3</a></li>
-						</ul>
-					</li>
+					<li><a href="careers.html">Careers</a></li>
 					<li><a href="contact.html">Contact</a></li>
 
 				</ul>
@@ -84,14 +75,13 @@
 
 	<div id="courses">
 		<div class="container">
-			<h2>Online Courses</h2>
+			<h2>About Us</h2>
 			<div class="row">
 				<div class="col-md-4">
 					<div class="featured-box">
 						<i class="fa fa-cogs fa-2x"></i>
 						<div class="text">
-							<h3>Responsive Design</h3>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+							<h4>Preparing entrepreneurs to turn education into dollars.</h4>
 						</div>
 					</div>
 				</div>
@@ -99,8 +89,7 @@
 					<div class="featured-box">
 						<i class="fa fa-leaf fa-2x"></i>
 						<div class="text">
-							<h3>HTML5/CSS3</h3>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+							<h4>Linking professionals with a rapidly growing, multi-billion dollar, federally funded industry.</h4>
 						</div>
 					</div>
 				</div>
@@ -108,8 +97,7 @@
 					<div class="featured-box">
 						<i class="fa fa-tachometer fa-2x"></i>
 						<div class="text">
-							<h3>Web Designing</h3>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+							<h4>Linking students with a support network of Proprietary Institutions and high ranking political figures.</h4>
 						</div>
 					</div>
 				</div>
