--- a/courses.html
+++ b/courses.html
@@ -3,15 +3,16 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="eLearning is a modern and fully responsive Template by WebThemez.">
-	<meta name="author" content="webThemez.com">
-	<title>About - Techro Bootstrap template</title>
+	<meta name="description" content="Proprietary Career Institute - A For Profit Education For Profitable Education">
+	<meta name="author" content="PCI">
+	<title>Proprietary Career Institute - Courses</title>
 	<link rel="favicon" href="assets/images/favicon.png">
 	<link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
 	<!-- Custom styles for our template -->
 	<link rel="stylesheet" href="assets/css/bootstrap-theme.css" media="screen">
+	<link rel="stylesheet" type="text/css" href="assets/css/da-slider.css" />
 	<link rel="stylesheet" href="assets/css/style.css">
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
@@ -19,7 +20,6 @@
 	<script src="assets/js/respond.min.js"></script>
 	<![endif]-->
 </head>
-
 <body>
 	<!-- Fixed navbar -->
 	<div class="navbar navbar-inverse">
@@ -28,25 +28,17 @@
 				<!-- Button for smallest screens -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
 				<a class="navbar-brand" href="index.html">
-					<img src="assets/images/logo.png" alt="Techro HTML5 template"></a>
+					<img src="assets/images/pci_logo_long_300.png" alt="PCI logo"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right mainNav">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="about.html">About</a></li>
 					<li class="active"><a href="courses.html">Courses</a></li>
-					<li><a href="fees.html">Fees</a></li>
+					<li><a href="aid.html">Financial Aid</a></li>
 					<li><a href="portfolio.html">Portfolio</a></li>
-					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <b class="caret"></b></a>
-						<ul class="dropdown-menu">
-							<li><a href="sidebar-right.html">Right Sidebar</a></li>
-							<li><a href="#">Dummy Link1</a></li>
-							<li><a href="#">Dummy Link2</a></li>
-							<li><a href="#">Dummy Link3</a></li>
-						</ul>
-					</li>
+					<li><a href="careers.html">Careers</a></li>
 					<li><a href="contact.html">Contact</a></li>
+
 				</ul>
 			</div>
 			<!--/.nav-collapse -->
@@ -69,28 +61,28 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="featured-box">
-						<i class="fa fa-cogs fa-2x"></i>
+						<i class="fa fa-gavel fa-2x"></i>
 						<div class="text">
-							<h3>Responsive Design</h3>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+							<h3>Understanding Federal Loopholes</h3>
+							The federal government assists students by providing loans with public money. This course will teach you how to structure your finances to capture the largest amount of public funds.
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="featured-box">
-						<i class="fa fa-leaf fa-2x"></i>
+						<i class="fa fa-sitemap fa-2x"></i>
 						<div class="text">
-							<h3>HTML5/CSS3</h3>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+							<h3>“Technical” Compliance</h3>
+							Some states require schools to reveal graduation rates and job data. But don’t worry-- in this class we’ll cover the nuances of “clearly and conspicuously,” and exactly where to hide a non-searchable PDF of this information on your websites.
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="featured-box">
-						<i class="fa fa-tachometer fa-2x"></i>
+						<i class="fa fa-university fa-2x"></i>
 						<div class="text">
-							<h3>Web Designing</h3>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+							<h4>Policy Protection: Working with Lobbyists to Safeguard Your New Industry</h4>
+							Brand New! This course will teach you how to work with local politicians and lobbyist groups, including the ASPCU (Association of Private Sector Colleges and Universities) to ensure that federal and state regulations are working in your favor. This course is especially useful for students who want to develop a long-term investment strategy in For-Profit Education. 
 						</div>
 					</div>
 				</div>
@@ -98,28 +90,28 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="featured-box">
-						<i class="fa fa-eye fa-2x"></i>
+						<i class="fa fa-compass fa-2x"></i>
 						<div class="text">
-							<h3>Web App Dev</h3>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+							<h3>Copywriting & Obfuscation </h3>
+							Our writing center empowers students to craft beautifully vague copy for all of their marketing needs. Learn to explain your for-profit educational institution without revealing core elements, such as a lack of proper accreditation, poor job placement records, or convoluted financing plans. 
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="featured-box">
-						<i class="fa fa-quote-right fa-2x"></i>
+						<i class="fa fa-graduation-cap fa-2x"></i>
 						<div class="text">
-							<h3>Data Base</h3>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+							<h3>Student Recruitment Strategies</h3>
+							Don’t Take No for an Answer! This course will give you the tools to recruit as many students as you can using time-honored high pressures sales tactics. For instance, we’ll teach you how to target older adult students through traditional advertising in newspapers and television.
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="featured-box">
-						<i class="fa fa-arrows fa-2x"></i>
+						<i class="fa fa-usd fa-2x"></i>
 						<div class="text">
-							<h3>Mobile App Dev</h3>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+							<h3>Juking the Stats 101: Career Placement Numbers</h3>
+							Job placement is hard. Factories shut down and corporations move overseas. Your institutions should still seek to entice prospective students with the promise of opportunity. This course will teach you how to establish direct postgraduate student employment with your own organization (or your friends’) to enhance your statistical success rates.
 						</div>
 					</div>
 				</div>
