--- a/aid.html
+++ b/aid.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Proprietary Career Institute - A For Profit Education For Profitable Education">
-	<meta name="author" content="webThemez.com">
+	<meta name="author" content="PCI">
 	<title>Proprietary Career Institute - Financial Aid</title>
 	<link rel="favicon" href="assets/images/favicon.png">
 	<link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
@@ -32,9 +32,9 @@
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right mainNav">
-					<li class="active"><a href="index.html">Home</a></li>
+					<li ><a href="index.html">Home</a></li>
 					<li><a href="courses.html">Courses</a></li>
-					<li><a href="aid.html">Financial Aid</a></li>
+					<li class="active"><a href="aid.html">Financial Aid</a></li>
 					<li><a href="portfolio.html">Portfolio</a></li>
 					<li><a href="careers.html">Careers</a></li>
 					<li><a href="contact.html">Contact</a></li>
