--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Proprietary Career Institute - A For Profit Education For Profitable Education">
-	<meta name="author" content="webThemez.com">
+	<meta name="author" content="PCI">
 	<title>Proprietary Career Institute</title>
 	<link rel="favicon" href="assets/images/favicon.png">
 	<link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
@@ -156,11 +156,11 @@
 	<footer id="footer">
 		<div class="container">
 			<div class="social text-center">
-				<a href="#"><i class="fa fa-twitter"></i></a>
+				<a href="https://twitter.com/ProprietaryCI"><i class="fa fa-twitter"></i></a>
 				<a href="#"><i class="fa fa-facebook"></i></a>
-				<a href="#"><i class="fa fa-dribbble"></i></a>
+				<a href="http://tinyletter.com/pci"><i class="fa fa-dribbble"></i></a>
 				<a href="#"><i class="fa fa-flickr"></i></a>
-				<a href="#"><i class="fa fa-github"></i></a>
+				<a href="https://github.com/arebe/pci-institute.com"><i class="fa fa-github"></i></a>
 			</div>
 
 			<div class="clear"></div>
@@ -174,9 +174,8 @@
 						<div class="panel-body">
 							<p class="simplenav">
 								<a href="index.html">Home</a> | 
-								<a href="about.html">About</a> |
 								<a href="courses.html">Courses</a> |
-								<a href="fees.html">Fees</a> |
+								<a href="aid.html">Financial Aid</a> |
 								<a href="portfolio.html">Portfolio</a> |
 								<a href="contact.html">Contact</a>
 							</p>
