--- a/courses.html
+++ b/courses.html
@@ -35,7 +35,7 @@
 					<li><a href="index.html">Home</a></li>
 					<li class="active"><a href="courses.html">Courses</a></li>
 					<li><a href="aid.html">Financial Aid</a></li>
-					<li><a href="portfolio.html">Portfolio</a></li>
+					<li><a href="why.html">Why For Profit?</a></li>
 					<li><a href="careers.html">Careers</a></li>
 					<li><a href="contact.html">Contact</a></li>
 
