--- a/careers.html
+++ b/careers.html
@@ -35,7 +35,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="courses.html">Courses</a></li>
                     <li><a href="aid.html">Financial Aid</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="why.html">Why For Profit?</a></li>
                     <li class="active"><a href="careers.html">Careers</a></li>
                     <li><a href="contact.html">Contact</a></li>
 
@@ -51,7 +51,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-8">
-                    <h1>About us</h1>
+                    <h1>Careers</h1>
                 </div>
             </div>
         </div>
