--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<li class="active"><a href="index.html">Home</a></li>
 					<li><a href="courses.html">Courses</a></li>
 					<li><a href="aid.html">Financial Aid</a></li>
-					<li><a href="portfolio.html">Portfolio</a></li>
+					<li><a href="why.html">Why For Profit?</a></li>
 					<li><a href="careers.html">Careers</a></li>
 					<li><a href="contact.html">Contact</a></li>
 
@@ -102,35 +102,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-md-4">
-					<div class="featured-box">
-						<i class="fa fa-eye fa-2x"></i>
-						<div class="text">
-							<h3>Web App Dev</h3>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="featured-box">
-						<i class="fa fa-quote-right fa-2x"></i>
-						<div class="text">
-							<h3>Data Base</h3>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="featured-box">
-						<i class="fa fa-arrows fa-2x"></i>
-						<div class="text">
-							<h3>Mobile App Dev</h3>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-						</div>
-					</div>
-				</div>
-			</div>
+
 
 		</div>
 	</div>
