--- a/aid.html
+++ b/aid.html
@@ -69,6 +69,7 @@
 		<div class="row">
 			<!-- Article content -->
 			<section class="col-sm-12 maincontent">
+				<img src="assets/images/about.jpg" alt="" class="img-rounded pull-right" width="300">
 				<h3>Step-by-Step Guide to Applying for Federal Student Aid</h3>
 				<p>
 					<ul>
