--- a/careers.html
+++ b/careers.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Proprietary Career Institute - A For Profit Education For Profitable Education">
     <meta name="author" content="PCI">
-    <title>Proprietary Career Institute- Careers</title>
+    <title>Proprietary Career Institute - Careers</title>
     <link rel="favicon" href="assets/images/favicon.png">
     <link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -62,21 +62,60 @@
         <div class="row">
             <!-- main content -->
             <section class="col-sm-8 maincontent">
-                <h3>Our Institute</h3>
+                <h3>What Students Say About Their For-Profit Educations!</h3>
+                <h4>Real Testimonials -- Real Students!*</h4>
                 <p>
-                    <img src="assets/images/about.jpg" alt="" class="img-rounded pull-right" width="300">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, consequuntur eius repellendus eos aliquid molestiae ea laborum ex Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam laudantium voluptates placeat consectetur quam aliquam beatae soluta accusantium iusto nihil nesciunt unde veniam magnam repudiandae sapiente.
+                    
+                    Paid fellowships, hands-on, useful training, spacious boardrooms, and more. All words our students said and all the more reason to, as one put it, “choose this school.”
                 </p>
-                <p>Consectetur adipisicing elit. Eveniet, consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam laudantium voluptates placeat consectetur quam aliquam beatae soluta accusantium iusto nihil nesciunt unde veniam magnam repudiandae sapiente.</p>
-                <h3>Our Achievements</h3>
-                <strong>2014</strong>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam laudantium voluptates placeat consectetur quam aliquam beatae soluta accusantium iusto nihil nesciunt unde veniam magnam repudiandae sapiente. consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam laudantium voluptates placeat consectetur quam aliquam!</p>
-                <strong>2013</strong>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam laudantium voluptates placeat consectetur quam aliquam beatae soluta accusantium iusto nihil nesciunt unde veniam magnam repudiandae sapiente. consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam laudantium voluptates placeat consectetur quam aliquam!</p>
-                <strong>2012</strong>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam laudantium voluptates placeat consectetur quam aliquam beatae soluta accusantium iusto nihil nesciunt unde veniam magnam repudiandae sapiente. consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam laudantium voluptates placeat consectetur quam aliquam!</p>
-                <strong>2011</strong>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam laudantium voluptates placeat consectetur quam aliquam beatae soluta accusantium iusto nihil nesciunt unde veniam magnam repudiandae sapiente. consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam laudantium voluptates placeat consectetur quam aliquam!</p>
+                <div class="row featured-box">
+                    <div class="col-md-3 col-sm-6 col-xs-6">
+                        <!-- Team Member -->
+                        <div class="team-member">
+                            <!-- Image Hover Block -->
+                            <div class="member-img">
+                                <!-- Image  -->
+                                <img class="img-responsive" src="assets/images/testimonial_1.jpg" alt="">
+                            </div>
+                            <!-- Member Details -->
+                            <h4>Robert Brown</h4>
+                        </div>
+                    </div>
+                    <p>I received my degree from PCI. I was interested in opening a for-profit college for <strong>graphic design</strong>, and I was told they had <strong>mentors and teachers</strong> from the <strong>top for-profit art institutes</strong>. I was told I would be getting a <strong>paid fellowship</strong> at a <strong>leading graphic design</strong> university, which turned out to be an undergraduate student who had me do his laundry. Although I was expecting my <strong>advanced degree</strong> to be in business management, my diploma says associates in retail management. I was so mad I skipped my <strong>long-awaited graduation.</strong></p>
+                </div>
+
+                <div class="row featured-box">
+                    <div class="col-md-3 col-sm-6 col-xs-6">
+                        <!-- Team Member -->
+                        <div class="team-member">
+                            <!-- Image Hover Block -->
+                            <div class="member-img">
+                                <!-- Image  -->
+                                <img class="img-responsive" src="assets/images/testimonial_2.jpg" alt="">
+                            </div>
+                            <!-- Member Details -->
+                            <h4>Nina Wallace</h4>
+                        </div>
+                    </div>
+                    <p>After a few weeks, I regretted my mistake when I decided to <strong>choose this school</strong>. The school promised <strong>hands-on and thorough training</strong> for federal finance management. Instead, the instructors were in<strong>experienced</strong> and just handed us FAFSA forms to memorize. The training was almost all useless, rather than <strong>comprehensive</strong> as promised. I received no <strong>useful training</strong>. My <strong>specific</strong>, financial questions remained unanswered.</p>
+                </div>
+
+                <div class="row featured-box">
+                    <div class="col-md-3 col-sm-6 col-xs-6">
+                        <!-- Team Member -->
+                        <div class="team-member">
+                            <!-- Image Hover Block -->
+                            <div class="member-img">
+                                <!-- Image  -->
+                                <img class="img-responsive" src="assets/images/testimonial_3.jpg" alt="">
+                            </div>
+                            <!-- Member Details -->
+                            <h4>Richard Belding</h4>
+                        </div>
+                    </div>
+                    <p>The program I was talked into did not have <strong>access to the spacious boardrooms</strong> that convinced me to attend on a tour of the PCI campus. I was also told that students graduated <strong>ready to open their own for-profit institution</strong>, but banks laughed me back to my middle-management job when I applied for loans. The advisors and recruiters told me what I wanted to hear and <strong>sold me on their program</strong>, but really they had no idea about the program and the specific field I wanted to get into. They did not have my <strong>best interests in mind.</strong> </p>
+                </div>
+
             </section>
             <!-- /main -->
 
@@ -84,18 +123,19 @@
             <aside class="col-sm-4 sidebar sidebar-right">
 
                 <div class="panel">
-                    <h4>Latest News</h4>
+                    <h4>Start your career with...</h4>
                     <ul class="list-unstyled list-spaces">
-                        <li><a href="">Responsive Design</a><br>
-                            <span class="small text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, laborum.</span></li>
-                        <li><a href="">HTML5, CSS3 and JavaScript</a><br>
-                            <span class="small text-muted">Consequuntur eius repellendus eos aliquid molestiae ea laborum ex quibusdam</span></li>
-                        <li><a href="">Bootstrap</a><br>
-                            <span class="small text-muted">Eveniet, consequuntur eius repellendus eos aliquid molestiae ea</span></li>
-                        <li><a href="">Clean Template</a><br>
-                            <span class="small text-muted">Sed, mollitia earum debitis est itaque esse reiciendis amet cupiditate.</span></li>
-                        <li><a href="">Premium Quality</a><br>
-                            <span class="small text-muted">Voluptate minus illo tenetur sint ab in culpa cumque impedit quibusdam. Saepe, molestias quia.</span></li>
+                        <li><a href="./courses.html">Understanding Federal Loopholes</a><br>
+                            <span class="small text-muted">Structure your finances the smart way.</span></li>
+                        <li><a href="./courses.html">Student Recruitment Strategies</a><br>
+                            <span class="small text-muted">Build a consumer base for your enterprise in no time!</span></li>
+                        <li><a href="./courses.html">Policy Protection</a><br>
+                            <span class="small text-muted">Work with lobbyists to safeguard your new industry.</span></li>
+                        <li><a href="./courses.html">Copywriting & Obfuscation</a><br>
+                            <span class="small text-muted">Learn creative writing skills to say more while doing less.</span></li>
+                        <li><a href="./courses.html">Juking the Stats 101</a><br>
+                            <span class="small text-muted">Enhance your success rates while making friends and allies.</span></li>
+                        <li><a href="./courses.html">And More...!</a></li>
                     </ul>
                 </div>
 
@@ -105,104 +145,7 @@
         </div>
     </section>
     <!-- /container -->
-    <section class="team-content">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h3>Meet Teachers</h3>
-                    <p>Voluptate minus illo tenetur sint ab in culpa cumque impedit quibusdam. Saepe, molestias quia.Voluptate minus illo tenetur sint ab in culpa cumque impedit quibusdam. Saepe, molestias quia.Voluptate minus illo tenetur sint ab in culpa cumque impedit quibusdam. Saepe, molestias quia.</p>
-                    <br />
-                </div>
-            </div>
-            <div class="row">
 
-                <div class="col-md-3 col-sm-6 col-xs-6">
-                    <!-- Team Member -->
-                    <div class="team-member">
-                        <!-- Image Hover Block -->
-                        <div class="member-img">
-                            <!-- Image  -->
-                            <img class="img-responsive" src="assets/images/photo-1.jpg" alt="">
-                        </div>
-                        <!-- Member Details -->
-                        <h4>John Doe</h4>
-                        <!-- Designation -->
-                        <span class="pos">CEO</span>
-                        <div class="team-socials">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-google-plus"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-github"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6 col-xs-6">
-                    <!-- Team Member -->
-                    <div class="team-member pDark">
-                        <!-- Image Hover Block -->
-                        <div class="member-img">
-                            <!-- Image  -->
-                            <img class="img-responsive" src="assets/images/photo-2.jpg" alt="">
-                        </div>
-                        <!-- Member Details -->
-                        <h4>Larry Doe</h4>
-                        <!-- Designation -->
-                        <span class="pos">Art Director</span>
-                        <div class="team-socials">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-google-plus"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-github"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6 col-xs-6">
-                    <!-- Team Member -->
-                    <div class="team-member pDark">
-                        <!-- Image Hover Block -->
-                        <div class="member-img">
-                            <!-- Image  -->
-                            <img class="img-responsive" src="assets/images/photo-3.jpg" alt="">
-                        </div>
-                        <!-- Member Details -->
-                        <h4>Ranith Kays</h4>
-                        <!-- Designation -->
-                        <span class="pos">Manager</span>
-                        <div class="team-socials">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-google-plus"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-github"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6 col-xs-6">
-                    <!-- Team Member -->
-                    <div class="team-member pDark">
-                        <!-- Image Hover Block -->
-                        <div class="member-img">
-                            <!-- Image  -->
-                            <img class="img-responsive" src="assets/images/photo-4.jpg" alt="">
-                        </div>
-                        <!-- Member Details -->
-                        <h4>Joan Ray</h4>
-                        <!-- Designation -->
-                        <span class="pos">Creative</span>
-                        <div class="team-socials">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-google-plus"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                            <a href="#"><i class="fa fa-github"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
     <footer id="footer">
         <div class="container">
             <div class="social text-center">
