--- a/contact.html
+++ b/contact.html
@@ -3,15 +3,16 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="eLearning is a modern and fully responsive Template by WebThemez.">
-	<meta name="author" content="webThemez.com">
-	<title>eLearning - Free Educational Responsive Web Template </title>
+	<meta name="description" content="Proprietary Career Institute - A For Profit Education For Profitable Education">
+	<meta name="author" content="PCI">
+	<title>Proprietary Career Institute - Courses</title>
 	<link rel="favicon" href="assets/images/favicon.png">
 	<link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
 	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
 	<!-- Custom styles for our template -->
 	<link rel="stylesheet" href="assets/css/bootstrap-theme.css" media="screen">
+	<link rel="stylesheet" type="text/css" href="assets/css/da-slider.css" />
 	<link rel="stylesheet" href="assets/css/style.css">
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
@@ -19,7 +20,6 @@
 	<script src="assets/js/respond.min.js"></script>
 	<![endif]-->
 </head>
-
 <body>
 	<!-- Fixed navbar -->
 	<div class="navbar navbar-inverse">
@@ -28,25 +28,17 @@
 				<!-- Button for smallest screens -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
 				<a class="navbar-brand" href="index.html">
-					<img src="assets/images/logo.png" alt="Techro HTML5 template"></a>
+					<img src="assets/images/pci_logo_long_300.png" alt="PCI logo"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right mainNav">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="about.html">About</a></li>
 					<li><a href="courses.html">Courses</a></li>
-					<li><a href="fees.html">Fees</a></li>
-					<li><a href="portfolio.html">Portfolio</a></li>
-					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <b class="caret"></b></a>
-						<ul class="dropdown-menu">
-							<li><a href="sidebar-right.html">Right Sidebar</a></li>
-							<li><a href="#">Dummy Link1</a></li>
-							<li><a href="#">Dummy Link2</a></li>
-							<li><a href="#">Dummy Link3</a></li>
-						</ul>
-					</li>
+					<li><a href="aid.html">Financial Aid</a></li>
+					<li><a href="why.html">Why For Profit?</a></li>
+					<li><a href="careers.html">Careers</a></li>
 					<li class="active"><a href="contact.html">Contact</a></li>
+
 				</ul>
 			</div>
 			<!--/.nav-collapse -->
