--- a/index.html
+++ b/index.html
@@ -110,18 +110,18 @@ function elizaStep() {
 			<div class="banner-content">
 				<div id="da-slider" class="da-slider">
 					<div class="da-slide">
-						<h2>Amazing Opportunity</h2>
-						<p>Want a career in proprietary education?</p>
+						<h2>Expand Your Opportunities</h2>
+						<p>Learn the business of converting federal funds to private enterprise.</p>
 						<div class="da-img"></div>
 					</div>
 					<div class="da-slide">
-						<h2>Online Education</h2>
-						<p>Over 75 years of providing quality edutainment.</p>
+						<h2>Maximize Profits!</h2>
+						<p>Turn a student’s education into your business opportunity.</p>
 						<div class="da-img"></div>
 					</div>
 					<div class="da-slide">
-						<h2>Super Success</h2>
-						<p>Graduates enter the field at the top of their game.</p>
+						<h2>Build a Local Economy</h2>
+						<p>Open a for-profit university in your own home town.</p>
 						<div class="da-img"></div>
 					</div>
 				</div>
@@ -134,10 +134,11 @@ function elizaStep() {
 	<div id="courses">
 		<div class="container">
 			<h2>About Us</h2>
+			<h3>The Proprietary Career Institute is dedicated to teaching students how to build the For-Profit Colleges of tomorrow. We believe in maximizing investment and expanding education as a profitable industry. If you want to learn how to start your own institution, attend ours!</h3>
 			<div class="row">
 				<div class="col-md-4">
 					<div class="featured-box">
-						<i class="fa fa-cogs fa-2x"></i>
+						<i class="fa fa-money fa-2x"></i>
 						<div class="text">
 							<h4>Preparing entrepreneurs to turn education into dollars.</h4>
 						</div>
@@ -145,7 +146,7 @@ function elizaStep() {
 				</div>
 				<div class="col-md-4">
 					<div class="featured-box">
-						<i class="fa fa-leaf fa-2x"></i>
+						<i class="fa fa-link fa-2x"></i>
 						<div class="text">
 							<h4>Linking professionals with a rapidly growing, multi-billion dollar, federally funded industry.</h4>
 						</div>
@@ -153,7 +154,7 @@ function elizaStep() {
 				</div>
 				<div class="col-md-4">
 					<div class="featured-box">
-						<i class="fa fa-tachometer fa-2x"></i>
+						<i class="fa fa-users fa-2x"></i>
 						<div class="text">
 							<h4>Linking students with a support network of Proprietary Institutions and high ranking political figures.</h4>
 						</div>
