--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<li class="active"><a href="index.html">Home</a></li>
 					<li><a href="courses.html">Courses</a></li>
 					<li><a href="aid.html">Financial Aid</a></li>
-					<li><a href="why.html">Why For Profit?</a></li>
+					<li><a href="why.html">Why For-Profit?</a></li>
 					<li><a href="careers.html">Careers</a></li>
 					<li><a href="contact.html">Contact</a></li>
 
@@ -196,13 +196,15 @@ function elizaStep() {
 			</div>
 		</div>
 	</section>
+
+	<!-- footer -->
 	<footer id="footer">
 		<div class="container">
 			<div class="social text-center">
 				<a href="https://twitter.com/ProprietaryCI"><i class="fa fa-twitter"></i></a>
-				<a href="#"><i class="fa fa-facebook"></i></a>
+				<a href="https://www.facebook.com/DataLoreHack"><i class="fa fa-facebook"></i></a>
 				<a href="http://tinyletter.com/pci"><i class="fa fa-dribbble"></i></a>
-				<a href="#"><i class="fa fa-flickr"></i></a>
+				<a href="https://www.flickr.com/search?text=proprietary%20education"><i class="fa fa-flickr"></i></a>
 				<a href="https://github.com/arebe/pci-institute.com"><i class="fa fa-github"></i></a>
 			</div>
 
@@ -219,7 +221,7 @@ function elizaStep() {
 								<a href="index.html">Home</a> | 
 								<a href="courses.html">Courses</a> |
 								<a href="aid.html">Financial Aid</a> |
-								<a href="portfolio.html">Portfolio</a> |
+								<a href="why.html">Why For-Profit</a> |
 								<a href="contact.html">Contact</a>
 							</p>
 						</div>
@@ -238,6 +240,7 @@ function elizaStep() {
 			</div>
 		</div>
 	</footer>
+	<!-- end footer -->
 
 	<!-- JavaScript libs are placed at the end of the document so the pages load faster -->
 	<script src="assets/js/modernizr-latest.js"></script>
