--- a/aid.html
+++ b/aid.html
@@ -139,14 +139,15 @@
 		<br>
 	</section>
 
+	<!-- footer -->
 	<footer id="footer">
 		<div class="container">
 			<div class="social text-center">
-				<a href="#"><i class="fa fa-twitter"></i></a>
-				<a href="#"><i class="fa fa-facebook"></i></a>
-				<a href="#"><i class="fa fa-dribbble"></i></a>
-				<a href="#"><i class="fa fa-flickr"></i></a>
-				<a href="#"><i class="fa fa-github"></i></a>
+				<a href="https://twitter.com/ProprietaryCI"><i class="fa fa-twitter"></i></a>
+				<a href="https://www.facebook.com/DataLoreHack"><i class="fa fa-facebook"></i></a>
+				<a href="http://tinyletter.com/pci"><i class="fa fa-dribbble"></i></a>
+				<a href="https://www.flickr.com/search?text=proprietary%20education"><i class="fa fa-flickr"></i></a>
+				<a href="https://github.com/arebe/pci-institute.com"><i class="fa fa-github"></i></a>
 			</div>
 
 			<div class="clear"></div>
@@ -160,9 +161,9 @@
 						<div class="panel-body">
 							<p class="simplenav">
 								<a href="index.html">Home</a> | 
-								<a href="about.html">About</a> |
-								<a href="services.html">Services</a> |
-								<a href="portfolio.html">Portfolio</a> |
+								<a href="courses.html">Courses</a> |
+								<a href="aid.html">Financial Aid</a> |
+								<a href="why.html">Why For-Profit</a> |
 								<a href="contact.html">Contact</a>
 							</p>
 						</div>
@@ -181,6 +182,7 @@
 			</div>
 		</div>
 	</footer>
+	<!-- end footer -->
 
 
 
