--- a/careers.html
+++ b/careers.html
@@ -35,7 +35,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="courses.html">Courses</a></li>
                     <li><a href="aid.html">Financial Aid</a></li>
-                    <li><a href="why.html">Why For Profit?</a></li>
+                    <li><a href="why.html">Why For-Profit?</a></li>
                     <li class="active"><a href="careers.html">Careers</a></li>
                     <li><a href="contact.html">Contact</a></li>
 
@@ -146,14 +146,15 @@
     </section>
     <!-- /container -->
 
+    <!-- footer -->
     <footer id="footer">
         <div class="container">
             <div class="social text-center">
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-dribbble"></i></a>
-                <a href="#"><i class="fa fa-flickr"></i></a>
-                <a href="#"><i class="fa fa-github"></i></a>
+                <a href="https://twitter.com/ProprietaryCI"><i class="fa fa-twitter"></i></a>
+                <a href="https://www.facebook.com/DataLoreHack"><i class="fa fa-facebook"></i></a>
+                <a href="http://tinyletter.com/pci"><i class="fa fa-dribbble"></i></a>
+                <a href="https://www.flickr.com/search?text=proprietary%20education"><i class="fa fa-flickr"></i></a>
+                <a href="https://github.com/arebe/pci-institute.com"><i class="fa fa-github"></i></a>
             </div>
 
             <div class="clear"></div>
@@ -167,11 +168,10 @@
                         <div class="panel-body">
                             <p class="simplenav">
                                 <a href="index.html">Home</a> | 
-								<a href="about.html">About</a> |
-								<a href="courses.html">Courses</a> |
-                                <a href="fees.html">Fees</a> |
-								<a href="portfolio.html">Portfolio</a> |
-								<a href="contact.html">Contact</a>
+                                <a href="courses.html">Courses</a> |
+                                <a href="aid.html">Financial Aid</a> |
+                                <a href="why.html">Why For-Profit</a> |
+                                <a href="contact.html">Contact</a>
                             </p>
                         </div>
                     </div>
@@ -189,6 +189,7 @@
             </div>
         </div>
     </footer>
+    <!-- end footer -->
 
 
 
